<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Man-Up</string>
    <string name="exit">Exit</string>
    <string name="exit_judge">Press again to exit</string>
    <string name="counter_start_toast">Start Counting, Tap \'Complete\' to stop</string>
    <string name="counter_complete_toast">Data saved</string>
    <string name="calorie_unit">%1$.2f Kcal</string>
    <string name="calorie">0.00 Kcal</string>

    <!-- System -->
    <string name="loading_dialog">Loading</string>
    <string name="error">Error</string>
    <string name="no_network">No Network Available</string>
    <string name="server_error">Server Error</string>
    <string name="ok">OK</string>

    <!-- Push Up -->
    <string name="pushup_introduction">Place the phone as shown in the image and begin push-up with clicking the START button.</string>

    <!-- Sit Up -->
    <string name="situp_introduction">Place the phone as shown in the image and begin sit-up with clicking the START button.</string>

    <!-- Running -->
    <string name="running_start_toast">Start Running, Tap \'Complete\' to stop</string>
    <string name="running_complete_toast">Data saved</string>
    <string name="running_start_prompt">Tap the Screen to Start</string>
    <string name="chronometer">%s Timer</string>
    <string name="step_unit">%1$d Steps</string>
    <string name="step">0 Steps</string>
    <string name="distance_unit">%1$d m</string>
    <string name="running_background_prompt">Run in background</string>

    <!-- Setting -->
    <string name="running_setting_weight">Weight:</string>
    <string name="weight_hint">Enter weight(kg)</string>
    <string name="running_setting_height">Height:</string>
    <string name="height_hint">Enter height(cm)</string>
    <string name="setting_require">You need to set your weight and height first.</string>
    <string name="setting_weight_error">Please input your weight</string>
    <string name="setting_height_error">Please input your height</string>
    <string name="setting_success">Success</string>
    <string name="language_change">Language</string>
    <string name="english">english</string>
    <string name="cnChinese">Simplified Chinese</string>
    <string name="twChinese">Tranditional Chinese</string>
    <string name="select_language">Select Language</string>

    <string-array name="language">
        <item>English</item>
        <item>Simplified Chinese</item>
        <item>Tranditional Chinese</item>
        <item>System Default</item>
    </string-array>

    <!-- Record -->
    <string name="delete_confirm">Confirmed to delete all records?</string>
    <string name="record_items_pushup">Push-Ups:</string>
    <string name="record_items_situp">Sit-Ups:</string>
    <string name="record_items_running">Running:</string>

    <!-- Notification -->
    <string name="notification_title">Man-up is running</string>
    <string name="notification_subtitle">Click to check</string>

</resources>