<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background"
                tools:context=".MainActivity">

    <include
        android:id="@+id/bottom_buttons_layout"
        layout="@layout/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

    <!-- Panel -->

    <ImageView
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="253dp"
        android:layout_centerInParent="true"
        android:scaleType="fitXY"
        android:src="@drawable/running_bg"/>

    <TextView
        android:id="@+id/date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/panel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:text="2014.04.14"
        android:textColor="#6f6f6f"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/running_setting_button"
        android:layout_width="50dp"
        android:layout_height="33dp"
        android:layout_alignRight="@id/panel"
        android:layout_alignTop="@id/panel"
        android:background="@drawable/setting_button"
        android:stateListAnimator="@null"/>

    <!-- Distance Counter -->

    <LinearLayout
        android:id="@+id/counter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/panel"
        android:layout_alignTop="@id/panel"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="39dp"
        android:gravity="center_horizontal"
        android:layout_marginRight="50dp"
        >

        <ImageView
            android:id="@+id/thousand"
            android:layout_width="60dp"
            android:layout_height="117dp"
            android:layout_alignLeft="@id/panel"
            android:layout_alignTop="@id/panel"
            android:src="@drawable/running_digit0"/>

        <ImageView
            android:id="@+id/hundred"
            android:layout_width="60dp"
            android:layout_height="117dp"
            android:layout_alignTop="@id/panel"
            android:layout_toRightOf="@id/thousand"
            android:src="@drawable/running_digit0"/>

        <ImageView
            android:id="@+id/decade"
            android:layout_width="60dp"
            android:layout_height="117dp"
            android:layout_alignTop="@id/panel"
            android:layout_toRightOf="@id/hundred"
            android:src="@drawable/running_digit0"/>

        <ImageView
            android:id="@+id/unit"
            android:layout_width="60dp"
            android:layout_height="117dp"
            android:layout_alignTop="@id/panel"
            android:layout_toRightOf="@id/decade"
            android:src="@drawable/running_digit0"/>
    </LinearLayout>
    <!-- Timer -->

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/panel"
        android:layout_below="@id/counter_layout"
        android:layout_marginRight="20dp"
        android:format="@string/chronometer"
        android:textColor="#6f6f6f"
        android:textSize="22dp"/>

    <!-- Step Counter -->

    <TextView
        android:id="@+id/step_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/panel"
        android:layout_below="@id/chronometer"
        android:layout_marginRight="20dp"
        android:text="@string/step"
        android:textColor="#6f6f6f"
        android:textSize="22dp"/>

    <!-- Calorie Counter -->

    <TextView
        android:id="@+id/calorie_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/panel"
        android:layout_below="@id/step_counter"
        android:layout_marginRight="20dp"
        android:text="@string/calorie"
        android:textColor="#6f6f6f"
        android:textSize="22dp"/>

    <ImageView
        android:id="@+id/masking_imageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_buttons_layout"
        android:background="#aa000000"/>

    <TextView
        android:id="@+id/prompt_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_buttons_layout"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/running_start_prompt"
        android:textColor="#05dae9"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/running_background_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_buttons_layout"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/running_background_prompt"
        android:textSize="20dp"/>

</RelativeLayout>